--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
+html {
+    font-size: .9rem;
+}
+
+@media (min-width: 600px) {
+    html {
+        font-size: 1.3125rem;
+    }
+}
+
 body {
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    font-size: 1.3rem;
     font-weight: 300;
     margin: 0;
 }
