--- a/style.css
+++ b/style.css
@@ -2,12 +2,6 @@ html {
     font-size: .9rem;
 }
 
-@media (min-width: 600px) {
-    html {
-        font-size: 1.3125rem;
-    }
-}
-
 body {
     text-align: center;
     font-family: 'Roboto', sans-serif;
@@ -117,4 +111,16 @@ section {
 .btn:focus {
     background: #252525;
     color: #fff;
+}
+
+@media (min-width: 600px) {
+    html {
+        font-size: 1.3125rem;
+    }
+}
+
+@media (min-width: 750px) {
+    .splitter {
+        display: flex;
+    }
 }
